RESOLVED FIXED210078
REGRESSION: 68000 JSC tests failing
https://bugs.webkit.org/show_bug.cgi?id=210078
Summary REGRESSION: 68000 JSC tests failing
Truitt Savell
Reported 2020-04-06 16:14:12 PDT
recently 68000 JSC tests began failing. I do not have a solid regression point because the build stopped working on this queue today for a time. Build Queue: https://build.webkit.org/builders/Apple-Catalina-Debug-JSC-Tests?numbuilds=50 Build: https://build.webkit.org/builders/Apple-Catalina-Debug-JSC-Tests/builds/637 Stdio: https://build.webkit.org/builders/Apple-Catalina-Debug-JSC-Tests/builds/637/steps/jscore-test/logs/stdio
Attachments
proposed patch. (1.80 KB, patch)
2020-04-06 16:44 PDT, Mark Lam
ysuzuki: review+
Radar WebKit Bug Importer
Comment 1 2020-04-06 16:15:13 PDT
Mark Lam
Comment 2 2020-04-06 16:36:53 PDT
Mark Lam
Comment 3 2020-04-06 16:44:09 PDT
Created attachment 395631 [details] proposed patch.
Yusuke Suzuki
Comment 4 2020-04-06 16:45:51 PDT
Comment on attachment 395631 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=395631&action=review r=me > Source/JavaScriptCore/jsc.cpp:603 > + RELEASE_ASSERT(!catchScope.exception()); how about using EXCEPTION_ASSERT?
Mark Lam
Comment 5 2020-04-06 16:52:31 PDT
Thanks for the review. (In reply to Yusuke Suzuki from comment #4) > > Source/JavaScriptCore/jsc.cpp:603 > > + RELEASE_ASSERT(!catchScope.exception()); > > how about using EXCEPTION_ASSERT? Talked to Yusuke offline. Will use scope.releaseAssertNoException() instead.
Mark Lam
Comment 6 2020-04-06 17:13:35 PDT
Note You need to log in before you can comment on or make changes to this bug.