REGRESSION: 68000 JSC tests failing. https://bugs.webkit.org/show_bug.cgi?id=210078 <rdar://problem/61364513>

Reviewed by Yusuke Suzuki.

The missing exception check is in jsc shell's GlobalObject::finishCreation().
Since this is just a debugging tool, and this exception will never be thrown in
practice, I've placated the validator by RELEASE_ASSERT'ing that the exception
will never be thrown.

* jsc.cpp:



Canonical link: https://commits.webkit.org/222995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259614 268f45cc-cd09-0410-ab3c-d52691b4dbfc