Source/JavaScriptCore/jsc.cpp
@@ -486,6 +486,7 @@ public:
 protected:
     void finishCreation(VM& vm, const Vector<String>& arguments)
     {
+        auto catchScope = DECLARE_CATCH_SCOPE(vm);
         Base::finishCreation(vm);
 
         addFunction(vm, "debug", functionDebug, 1);
@@ -599,7 +600,8 @@ protected:
 
         JSFunction* IsHTMLDDAGetter = JSFunction::create(vm, this, 0, "IsHTMLDDA"_s, functionMakeMasquerader);
         dollar->putGetter(this, Identifier::fromString(vm, "IsHTMLDDA"), IsHTMLDDAGetter, static_cast<unsigned>(PropertyAttribute::Accessor));
-        
+        catchScope.releaseAssertNoException();
+
         JSObject* agent = JSFinalObject::create(vm, plainObjectStructure);
         dollar->putDirect(vm, Identifier::fromString(vm, "agent"), agent);
         
